<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/main_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:orderInCategory="100" />

    <item
        android:id="@+id/action_editProfile"
        android:title="@string/edit_profile" />

    <item
        android:id="@+id/action_help"
        android:title="@string/help" />

    <item
        android:id="@+id/action_contactUs"
        android:title="@string/contact_us" />

    <item
        android:id="@+id/action_security"
        android:title="@string/security" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="100"/>
</menu>
