<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral_variant20"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView_Logo"
                android:layout_width="170dp"
                android:layout_height="98dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logo_app_firebase"
                android:foregroundGravity="center"
                android:maxWidth="180dp"
                app:srcCompat="@drawable/ic_logo" />

            <TextView
                android:id="@+id/textView_head_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView_Logo"
                android:layout_marginTop="1dp"
                android:fontFamily="times"
                android:text="@string/endless_love"
                android:textAlignment="center"
                android:textColor="@color/DarkGray" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_head_main"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="50dp"
                android:text="@string/let_s_continue"
                android:textColor="@color/DarkGray" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
