<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral_variant20"
    tools:context=".forgetPassword">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/enter_your_email_address_and_a_reset_password_link_will_send_you_to_your_email_address"
            android:textColor="@color/AliceBlue"
            android:textSize="25sp" />


      <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:id="@+id/editText_forget_email"
          android:layout_marginTop="150dp"
          android:layout_marginStart="40dp"
          android:layout_marginEnd="40dp"
          android:background="@drawable/border"
          android:hint="@string/e_g_abc_gmail_com"
          android:importantForAutofill="no"
          android:inputType="textEmailAddress"
          android:padding="6dp"
          android:textSize="20sp"/>


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_forget_email"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:text="@string/reset_password" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone" />
    </RelativeLayout>


</ScrollView>